--- a/index.html
+++ b/index.html
@@ -14,10 +14,100 @@
     <title>Vanilla App Tri</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Hello World</h1>
-      <a href="" class="btn btn-primary">Click me</a>
-    </div>
+     <div class="container">
+      <!-- Upper Row-->
+      <div class="row searchbar">
+        <div class="col-7 form-container">
+          <form id="search-form">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="text"
+                  id="search-city"
+                  class="form-control"
+                  placeholder="Enter city"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  class="btn btn-primary search-button"
+                  type="submit"
+                  value="Search"
+                />
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-1 location-container">
+          <button
+            id="location"
+            class="btn btn-primary search-button location-button"
+          >
+            <i class="fa-solid fa-location-dot"></i>
+          </button>
+        </div>
+        <div class="col-4 time">
+          <p id="time" class="text-center">Wednesday 19:36</p>
+        </div>
+      </div>
+      <!-- Medium Row-->
+      <div class="row weather-today">
+        <div class="col-4">
+          <h1 id="current-city">Ternopil</h1>
+          <span id="current-temp">12°C</span>
+          <span class="units">
+            <a href="#" id="celcius" class="focus"></a>
+          </span>
+          <div id="current-weather">Sunny</div>
+        </div>
+        <div class="col-5">
+          <ul>
+            <span class="weather-conditions">Weather conditions:</span>
+            <li>Humidity <span id="humidity">67</span>%</li>
+            <li>Wind: <span id="wind">1</span> km/h</li>
+          </ul>
+        </div>
+        <div class="col-3 weather-img text-center">
+          <img src="images/sun.png" alt="weather icon" class="weather-icon" />
+        </div>
+      </div>
+      <hr />
+      <!-- Bottom Row-->
+      <div class="row justify-content-around weather-prediction">
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Thu</span> <br />26 May</div>
+          <img src="images/thunderstorm.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">H:8° <span class="divider">|</span> L:0°</div>
+        </div>
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Fri</span> <br />27 May</div>
+          <img src="images/sun.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">
+            H:21° <span class="divider">|</span> L:15°
+          </div>
+        </div>
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Sat</span> <br />28 May</div>
+          <img src="images/thunderstorm.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">
+            H:5° <span class="divider">|</span> L:-1°
+          </div>
+        </div>
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Sun</span> <br />29 May</div>
+          <img src="images/lightning.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">
+            H:18° <span class="divider">|</span> L:9°
+          </div>
+        </div>
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Mon</span> <br />30 May</div>
+          <img src="images/clouds.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">
+            H:14° <span class="divider">|</span> L:5°
+          </div>
+        </div>
     <script src="src/app.js"></script>
   </body>
 </html>
