--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
           </button>
         </div>
         <div class="col-4 time">
-          <p id="time" class="text-center">Wednesday 19:36</p>
+          <p id="time" class="text-center">Monday 19:28</p>
         </div>
       </div>
       <!-- Medium Row-->
       <div class="row weather-today">
         <div class="col-4">
           <h1 id="current-city">Ternopil</h1>
-          <span id="current-temp">12°C</span>
+          <span id="current-temp">18°C</span>
           <span class="units">
             <a href="#" id="celcius" class="focus"></a>
           </span>
@@ -76,36 +76,36 @@
       <!-- Bottom Row-->
       <div class="row justify-content-around weather-prediction">
         <div class="col-2 weather-box">
-          <div class="date"><span class="day">Thu</span> <br />26 May</div>
-          <img src="images/thunderstorm.png" alt="" class="weather-icon-sm" />
-          <div class="temp-range">H:8° <span class="divider">|</span> L:0°</div>
+          <div class="date"><span class="day">Tue</span> <br />31 May</div>
+          <img src="images/sun.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">H:23° <span class="divider">|</span> L:14°</div>
         </div>
         <div class="col-2 weather-box">
-          <div class="date"><span class="day">Fri</span> <br />27 May</div>
+          <div class="date"><span class="day">Wed</span> <br />1 June</div>
           <img src="images/sun.png" alt="" class="weather-icon-sm" />
           <div class="temp-range">
-            H:21° <span class="divider">|</span> L:15°
+            H:25° <span class="divider">|</span> L:14°
           </div>
         </div>
         <div class="col-2 weather-box">
-          <div class="date"><span class="day">Sat</span> <br />28 May</div>
-          <img src="images/thunderstorm.png" alt="" class="weather-icon-sm" />
+          <div class="date"><span class="day">Thu</span> <br />2 June</div>
+          <img src="images/sun.png" alt="" class="weather-icon-sm" />
           <div class="temp-range">
-            H:5° <span class="divider">|</span> L:-1°
+            H:27° <span class="divider">|</span> L:16°
           </div>
         </div>
         <div class="col-2 weather-box">
-          <div class="date"><span class="day">Sun</span> <br />29 May</div>
-          <img src="images/lightning.png" alt="" class="weather-icon-sm" />
-          <div class="temp-range">
-            H:18° <span class="divider">|</span> L:9°
-          </div>
-        </div>
-        <div class="col-2 weather-box">
-          <div class="date"><span class="day">Mon</span> <br />30 May</div>
+          <div class="date"><span class="day">Fri</span> <br />3 June</div>
           <img src="images/clouds.png" alt="" class="weather-icon-sm" />
           <div class="temp-range">
-            H:14° <span class="divider">|</span> L:5°
+            H:23° <span class="divider">|</span> L:14°
+          </div>
+        </div>
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Sat</span> <br />4 June</div>
+          <img src="images/clouds.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">
+            H:22° <span class="divider">|</span> L:15°
           </div>
         </div>
     <script src="src/app.js"></script>
