Updated the search bar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   type="text"
                   id="search-city"
                   class="form-control"
-                  placeholder="Enter city"
+                  placeholder="Type your current city"
                   autocomplete="off"
                 />
               </div>
