--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </ul>
         </div>
         <div class="col-3 weather-img text-center">
-          <img src="images/sun.png" alt="weather icon" class="weather-icon" />
+          <img src="images/cloud.png" alt="weather icon" class="weather-icon" />
         </div>
       </div>
       <hr />
@@ -96,21 +96,21 @@
         </div>
         <div class="col-2 weather-box">
           <div class="date"><span class="day">Thu</span> <br />2 June</div>
-          <img src="images/sun.png" alt="" class="weather-icon-sm" />
+          <img src="images/sunclouds.png" alt="" class="weather-icon-sm" />
           <div class="temp-range">
             H:27° <span class="divider">|</span> L:16°
           </div>
         </div>
         <div class="col-2 weather-box">
           <div class="date"><span class="day">Fri</span> <br />3 June</div>
-          <img src="images/clouds.png" alt="" class="weather-icon-sm" />
+          <img src="images/cloud.png" alt="" class="weather-icon-sm" />
           <div class="temp-range">
             H:23° <span class="divider">|</span> L:14°
           </div>
         </div>
         <div class="col-2 weather-box">
           <div class="date"><span class="day">Sat</span> <br />4 June</div>
-          <img src="images/clouds.png" alt="" class="weather-icon-sm" />
+          <img src="images/sunclouds.png" alt="" class="weather-icon-sm" />
           <div class="temp-range">
             H:22° <span class="divider">|</span> L:15°
           </div>
