--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       <div class="row weather-today">
         <div class="col-4">
           <h1 id="current-city">Ternopil</h1>
-          <span id="current-temp">12°C</span>
-          <span class="units">
+          <span id="current-temp">12</span>
+          <span class="units">°C
             <a href="#" id="celcius" class="focus"></a>
           </span>
           <div id="current-weather">Sunny</div>
@@ -79,42 +79,7 @@
           <img src="images/cloud.png" alt="weather icon" class="weather-icon" />
         </div>
       </div>
-      <hr />
-      <!-- Bottom Row-->
-      <div class="row justify-content-around weather-prediction">
-        <div class="col-2 weather-box">
-          <div class="date"><span class="day">Tue</span> <br />31 May</div>
-          <img src="images/sun.png" alt="" class="weather-icon-sm" />
-          <div class="temp-range">H:23° <span class="divider">|</span> L:14°</div>
-        </div>
-        <div class="col-2 weather-box">
-          <div class="date"><span class="day">Wed</span> <br />1 June</div>
-          <img src="images/sun.png" alt="" class="weather-icon-sm" />
-          <div class="temp-range">
-            H:25° <span class="divider">|</span> L:14°
-          </div>
-        </div>
-        <div class="col-2 weather-box">
-          <div class="date"><span class="day">Thu</span> <br />2 June</div>
-          <img src="images/sunclouds.png" alt="" class="weather-icon-sm" />
-          <div class="temp-range">
-            H:27° <span class="divider">|</span> L:16°
-          </div>
-        </div>
-        <div class="col-2 weather-box">
-          <div class="date"><span class="day">Fri</span> <br />3 June</div>
-          <img src="images/cloud.png" alt="" class="weather-icon-sm" />
-          <div class="temp-range">
-            H:23° <span class="divider">|</span> L:14°
-          </div>
-        </div>
-        <div class="col-2 weather-box">
-          <div class="date"><span class="day">Sat</span> <br />4 June</div>
-          <img src="images/sunclouds.png" alt="" class="weather-icon-sm" />
-          <div class="temp-range">
-            H:22° <span class="divider">|</span> L:15°
-          </div>
-        </div>
+    
     <script src="src/app.js"></script>
   </body>
 </html>
