--- a/index.html
+++ b/index.html
@@ -78,6 +78,42 @@
         <div class="col-3 weather-img text-center">
           <img src="images/cloud.png" alt="weather icon" class="weather-icon" />
         </div>
+        <!-- Bottom Row-->
+      <div class="row justify-content-around weather-prediction">
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Thu</span> <br />26 May</div>
+          <img src="images/cloud.png" alt="" class="weather-icon-sm" />
+        <div class="temp-range">
+            H:26° <span class="divider">|</span> L:15°
+          </div>
+        </div>
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Fri</span> <br />27 May</div>
+          <img src="images/sun.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">
+            H:27° <span class="divider">|</span> L:15°
+          </div>
+        </div>
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Sat</span> <br />28 May</div>
+          <img src="images/sun.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">
+            H:25° <span class="divider">|</span> L:13°
+          </div>
+        </div>
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Sun</span> <br />29 May</div>
+          <img src="images/cloud.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">
+            H:32° <span class="divider">|</span> L:19°
+          </div>
+        </div>
+        <div class="col-2 weather-box">
+          <div class="date"><span class="day">Mon</span> <br />30 May</div>
+          <img src="images/sun.png" alt="" class="weather-icon-sm" />
+          <div class="temp-range">
+            H:24° <span class="divider">|</span> L:15°
+          </div>
       </div>
     
     <script src="src/app.js"></script>
